--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </thead>
         <tbody>
           <tr>
-            <td>若手インフラエンジニア現状確認会</a></td>
+            <td>若手インフラエンジニア現状確認会 (Private study group)</a></td>
             <td>Organizer</td>
           </tr>
           <tr>
