--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <td>Private study group (#wakateinfra)</td>
           </tr>
           <tr>
-            <td><a href="https://www.slideshare.net/hifumis/20151206shiteitoudan2015">指定登壇2015 「いるだけで成長できる環境」としての研修の場づくり</a></td>
-            <td><a href="https://pepabo.connpass.com/event/22180/">指定登壇2015</a></td>
+            <td><a href="https://www.slideshare.net/hifumis/20151206shiteitoudan2015">師弟登壇2015 「いるだけで成長できる環境」としての研修の場づくり</a></td>
+            <td><a href="https://pepabo.connpass.com/event/22180/">師弟登壇2015</a></td>
           </tr>
           <tr>
             <td><a href="https://www.slideshare.net/hifumis/20150128-monitoringcasual7hfm">30days Albumの裏側〜監視・インフラCI事情〜</a></td>
@@ -74,7 +74,7 @@
             <td>Organizer</td>
           </tr>
           <tr>
-            <td><a href="https://pepabo.connpass.com/event/22180/">指定登壇2015</a></td>
+            <td><a href="https://pepabo.connpass.com/event/22180/">師弟登壇2015</a></td>
             <td>Organizer</td>
           </tr>
         </tbody>
