--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Okumura Takahiro</h1>
       <div class="row">
         <div class="column column-90">
-          <p>I'v been working as a software engineer since 2013.</p>
+          <p>I'v been working as a software engineer since 2013 at GMO Pepabo, Inc.</p>
         </div>
         <div class="column">
           <img src="https://s.gravatar.com/avatar/47e8318347fb8cd6a2c39bc6cf6e333e?s=80" alt="portrait photo">
