--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
         </div>
       </div>
 
+      <h2>SNS / Blog</h2>
+      <ul>
+        <li>Twitter: <a href="https://twitter.com/hfm">@hfm</a></li>
+        <li>GitHub: <a href="https://github.com/hfm">@hfm</a></li>
+        <li>Instagram: <a href="https://instagram.com/hfm">@hfm</a></li>
+        <li>Blog: <a href="http://blog.hifumi.info/">blog: takahiro okumura</a></li>
+        <li>Medium: <a href="https://medium.com/@hfm">@hfm</a></li>
+      </ul>
+
       <h2>Talks</h2>
       <table>
         <thead>
