--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <tbody>
           <tr>
             <td><a href="https://builderscon.io/tokyo/2018/session/87e13506-2f80-4fae-af9c-2421c7dbb460">あなたの知らないデータベースのロギングの世界</a></td>
-            <td><a href="https://builderscon.io/tokyo/2018/">builderscon 2018</a></td>
+            <td><a href="https://builderscon.io/tokyo/2018/">builderscon tokyo 2018</a></td>
           </tr>
           <tr>
             <td><a href="https://speakerdeck.com/hfm/dynamic-certificate-internals-with-ngx-mruby-number-nagoyark03">Dynamic certificate internals with ngx_mruby</a></td>
