Add my presentations

--- a/index.html
+++ b/index.html
@@ -21,13 +21,23 @@
       </div>
 
       <h2>SNS / Blog</h2>
-      <ul>
-        <li>Twitter: <a href="https://twitter.com/hfm">@hfm</a></li>
-        <li>GitHub: <a href="https://github.com/hfm">@hfm</a></li>
-        <li>Instagram: <a href="https://instagram.com/hfm">@hfm</a></li>
-        <li>Blog: <a href="http://blog.hifumi.info/">blog: takahiro okumura</a></li>
-        <li>Medium: <a href="https://medium.com/@hfm">@hfm</a></li>
-      </ul>
+      <div class="row">
+        <div class="column">
+        <ul>
+          <li>Twitter: <a href="https://twitter.com/hfm">@hfm</a></li>
+          <li>GitHub: <a href="https://github.com/hfm">@hfm</a></li>
+          <li>SpeakerDeck: <a href="https://speakerdeck.com/hfm">@hfm</a></li>
+          <li>SlideShare: <a href="https://www.slideshare.net/hifumis">@hifumis</a></li>
+        </ul>
+        </div>
+        <div class="column">
+        <ul>
+          <li>Blog: <a href="http://blog.hifumi.info/">blog: takahiro okumura</a></li>
+          <li>Medium: <a href="https://medium.com/@hfm">@hfm</a></li>
+          <li>Instagram: <a href="https://instagram.com/hfm">@hfm</a></li>
+        </ul>
+        </div>
+      </div>
 
       <h2>Talks</h2>
       <table>
