--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <li>Blog: <a href="http://blog.hifumi.info/">blog: takahiro okumura</a></li>
           <li>Medium: <a href="https://medium.com/@hfm">@hfm</a></li>
           <li>Instagram: <a href="https://instagram.com/hfm">@hfm</a></li>
+          <li>Booklog: <a href="https://booklog.jp/users/hfmgarden">hfmgarden</a></li>
         </ul>
         </div>
       </div>
