--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Okumura Takahiro</h1>
       <div class="row">
         <div class="column column-90">
-          <p>I'v been working as a software engineer since 2013 at GMO Pepabo, Inc.</p>
+          <p>I'm a software engineer since 2013.</p>
         </div>
         <div class="column">
           <img src="https://s.gravatar.com/avatar/47e8318347fb8cd6a2c39bc6cf6e333e?s=80" alt="portrait photo">
@@ -38,6 +38,12 @@
           <li>Booklog: <a href="https://booklog.jp/users/hfmgarden">hfmgarden</a></li>
         </ul>
         </div>
+      </div>
+
+      <h2>Career</h2>
+      <div>
+        <h3>2013 April - present: <a href="https://pepabo.com">GMO Pepabo, Inc.</a></h3>
+        <p>GMO Pepabo (formerly known as paperboy&co., Inc.) is a web service company. I primarily works <a href ="https://heteml.jp">Heteml</a> of web hosting service, <a href="https://30d.jp">30days Album</a> of sharing photo service, <a href="https://goope.jp">Goope</a> of website builder, <a href="https://petit.cc">Petit</a> of blog service, and <a href="https://shop-pro.jp/">ColorMeShop</a>.</p>
       </div>
 
       <h2>Talks</h2>
