--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <div>
         <h3>2013 April - present: <a href="https://pepabo.com">GMO Pepabo, Inc.</a></h3>
         <p>GMO Pepabo (formerly known as paperboy&co., Inc.) is a web service company. I primarily works <a href ="https://heteml.jp">Heteml</a> of web hosting service, <a href="https://30d.jp">30days Album</a> of sharing photo service, <a href="https://goope.jp">Goope</a> of website builder, <a href="https://petit.cc">Petit</a> of blog service, and <a href="https://shop-pro.jp/">ColorMeShop</a>.</p>
+        <p>Since 2013 Apr, Infrastructure (Web operation) engineer at Heteml group. Since 2015 Jan, Infrastructure engineer at Infrastructure group. Since 2016 Jan, Senior engineer at Infrastructure group. Since 2018 May, Senior engineer at Platform group.</p>
       </div>
 
       <h2>Talks</h2>
